fix: layout jump on video loading

--- a/src/styles/components/marquee.css
+++ b/src/styles/components/marquee.css
@@ -67,16 +67,28 @@
   padding-inline: 0.5rem;
   box-sizing: border-box;
   will-change: opacity;
+  width: 100vw;
+  flex: 0 0 100vw;
 
   & > * {
     z-index: 11;
   }
 
-  & video {
+  & .video-wrapper {
     position: relative;
+    width: 100%;
     max-width: 75rem;
+    aspect-ratio: 16 / 9;
 
     box-shadow: var(--shadow-md);
+    background-color: hsl(var(--bg-700));
+    overflow: hidden;
+
+    & video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
 
@@ -173,9 +185,5 @@
 @media not (min-width: 83rem) {
   .marquee-scroll-arrow {
     height: unset;
-
-    & > div {
-      background-color: #55555580;
-    }
   }
 }
